<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background">


  <TextView
      android:id="@+id/balance"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="20dp"
      android:text="@string/balance"
      android:textSize="22sp"
      android:textStyle="bold" />


  <Button
      android:id="@+id/add_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/balance"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="20dp"
      android:backgroundTint="@color/btn_color"
      android:text="@string/add_operation"
      android:textColor="@color/black" />

  <View
      android:layout_width="300dp"
      android:layout_height="1dp"
      android:layout_below="@id/add_btn"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="8dp"
      android:background="@color/black" />


  <Button
      android:id="@+id/expenses_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/add_btn"
      android:layout_marginStart="40dp"
      android:layout_marginTop="20dp"
      android:backgroundTint="@color/btn_color"
      android:text="@string/expenses"
      android:textColor="@color/black" />

  <Button
      android:id="@+id/income_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/add_btn"
      android:layout_alignParentEnd="true"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="40dp"
      android:backgroundTint="@color/btn_color"
      android:text="@string/income"
      android:textColor="@color/black" />

  <Button
      android:id="@+id/day_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/income_btn"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:text="@string/day"
      android:backgroundTint="@color/btn_color"
      android:textColor="@color/black"/>

  <Button
      android:id="@+id/week_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/income_btn"
      android:layout_marginTop="20dp"
      android:layout_centerHorizontal="true"
      android:text="@string/week"
      android:backgroundTint="@color/btn_color"
      android:textColor="@color/black"/>


  <Button
      android:id="@+id/month_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/income_btn"
      android:layout_marginEnd="20dp"
      android:layout_alignParentEnd="true"
      android:layout_marginTop="20dp"
      android:text="@string/month"
      android:backgroundTint="@color/btn_color"
      android:textColor="@color/black"/>

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/month_btn"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="15dp"
      android:text="@string/expenses"
      android:textSize="24sp"
      android:textStyle="bold"/>


  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@id/textView2"
      android:layout_marginTop="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


      <androidx.cardview.widget.CardView
          android:id="@+id/cardViewGraph"
          android:layout_width="match_parent"
          android:layout_height="150dp"
          android:layout_marginTop="20dp"
          android:backgroundTint="@color/graph_color"
          android:elevation="10dp"
          app:cardCornerRadius="10dp">


        <!--Linear layout to display pie chart -->
        <!-- and details of pie chart-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

          <!--Pie chart to display the data-->

          <org.eazegraph.lib.charts.PieChart xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/piechart"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_marginLeft="15dp"
              android:layout_marginTop="15dp"
              android:layout_marginBottom="15dp"
              android:layout_weight="1"
              android:padding="6dp"

              tools:ignore="MissingClass" />

          <!--Creating another linear layout -->
          <!-- to display pie chart details -->
          <LinearLayout
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_marginLeft="20dp"
              android:layout_weight="1"
              android:gravity="center_vertical"
              android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

              <View
                  android:layout_width="15dp"
                  android:layout_height="match_parent"
                  android:background="@color/products" />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingLeft="10dp"
                  android:text="Продукты" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp">

              <View
                  android:layout_width="15dp"
                  android:layout_height="match_parent"
                  android:background="@color/clothes" />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingLeft="10dp"
                  android:text="Одежда" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp">

              <View
                  android:layout_width="15dp"
                  android:layout_height="match_parent"
                  android:background="@color/entertainments" />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingLeft="10dp"
                  android:text="Развлечения" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp">

              <View
                  android:layout_width="15dp"
                  android:layout_height="match_parent"
                  android:background="@color/health" />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingLeft="10dp"
                  android:text="Здоровье" />

            </LinearLayout>

          </LinearLayout>

        </LinearLayout>

      </androidx.cardview.widget.CardView>

      <ListView
          android:id="@+id/listview"
          android:layout_width="match_parent"
          android:layout_height="443dp"
          android:layout_marginTop="5dp" />
    </LinearLayout>
  </ScrollView>
</RelativeLayout>

